samples/_failures_safe/1761316593_b6691d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_41ae024e.c: In function ‘main’:
./samples/SAFE/__tmp_41ae024e.c:142:5: error: expected declaration or statement at end of input
  142 |     printf("Matrix Operations Program\n");
      |     ^~~~~~
